@@ -2470,7 +2470,9 @@ class Parser {
 				if ( $openmatch or $closematch ) {
 					$paragraphStack = false;
 					# TODO bug 5718: paragraph closed
-					$output .= $this->closeParagraph();
+					if ( !$this->mInPre or $preOpenMatch ) {
+						$output .= $this->closeParagraph();
+					}
 					if ( $preOpenMatch and !$preCloseMatch ) {
 						$this->mInPre = true;
 					}
