@@ -42,7 +42,7 @@ body {
 	color: black;
 }
 
-#article p {
+#article p, #article pre.poem {
 	padding-top: 0;
 	padding-bottom: 0;
 	margin-top: 1ex;
