@@ -290,7 +290,7 @@ img {
 	margin: 0 0 0 0;
 }
 
-p {
+p, pre.poem {
 	margin: 1em 0 1em 0;
 }
 
